[tool.poetry]
name = "path-finder-viz"
version = "0.1.0"
description = "Dijkstra Search & Path Visualization for viral-style algorithm animations"
authors = ["nishon <nishon@naxa.com.np>"]
license = "MIT"
readme = "README.md"
packages = [{include = "path_viz", from = "src"}]

[tool.poetry.scripts]
path-viz = "path_viz.visualizer:main"

[tool.poetry.dependencies]
python = "^3.8"
osmnx = "^1.9.1"
networkx = "^2.6"
matplotlib = "^3.5.0"
numpy = "^1.21.0"
scikit-learn = "^1.3.0"
pygame = "^2.5.0"
scipy = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.0"
flake8 = "^4.0"
isort = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
